# shader-merkle-rs

./: Cargo.toml  README.md
examples/: tree.rs
src/: lib.rs  parser.rs  paths.rs  utilities.rs
tests/data/CodeGenHLSL/Samples/MiniEngine/: ParticleUpdateCommon.hlsli  ParticleUtility.hlsli
